# Blink-Eye

./: .gitignore  AGENTS.md  CHANGELOG.md  CHINESE_TTS_UPGRADE.md  CONTRIBUTING.md  LOCAL_CAPABILITY_MATRIX.md  LOCAL_DEVELOPMENT.md  MANIFEST.in  README.md  SECURITY.md  env.example  env.local.example  pyproject.toml  pyrightconfig.json  tutorial.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-question.yml  3-feature_request.yml  4-service-issue.yml  5-new-service.yml  6-dependency.yml  7-troubleshooting.yml
.github/workflows/: brain-core-proof.yml
config/: local_runtime_profiles.json
docs/: 00_current_project_snapshot.md  00_lpm_inspired_browser_melo_strategy.md  01_multiphase_roadmap_browser_melo.md  01_research_translation_lpm_to_blink.md  02_next_huge_upgrade_strategy.md  02_target_browser_runtime_architecture.md  03_actor_runtime_architecture.md  03_safety_scope_boundaries_browser_melo.md  04_blink_browser_perf_bench_evaluation_plan.md  04_phase_roadmap.md  05_blink_actor_bench_eval_plan.md  05_debugging_playbook_browser_melo.md  06_migration_notes_native_kokoro_to_browser_melo.md  06_safety_privacy_consent.md  07_memory_persona_performance_design.md  07_rollout_and_release_gate.md  08_repo_integration_map.md  08_webrtc_media_and_barge_in_requirements.md  AUTONOMOUS_PRESENCE_DIRECTOR_QA.md  AUTONOMY_REEVALUATION_QA.md  BOUNDED_DELIBERATION_QA.md  COMMITMENT_WAKE_ROUTER_QA.md  CONTINUITY_TEST_MANUAL.md  ENGINEERING_REVIEW_2026-04.md  FILE_MAP.md  FUZZ_TARGET_MATRIX.md  FUZZ_TEST_QUICKSTART.md  HYBRID_OPENAI_DEMO_RUNBOOK.md  MANUAL_QA_SCORECARD.md  PROCEDURAL_MEMORY_QA.md  README.md  ROBOT_HEAD_BRINGUP_CHECKLIST.md  ROBOT_HEAD_CAPABILITY_CATALOG.md  ROBOT_HEAD_INTEGRATION.md  ROBOT_HEAD_OPERATOR_HANDBOOK.md  ROBOT_HEAD_SHOWS.md  ROLLBACK_LOCAL_AUDIO_2026-04-16.md  TEMPORAL_CONTINUITY_GRAPH_QA.md  USER_MANUAL.md  WORKING_MEMORY_QA.md  (+9 more)
docs/MeloTTS-reference/: README.md  runtime-requirements.txt
docs/api/: README.md  conf.py  index.rst  rtd-test.sh
docs/bilingual_actor_runtime/: 00_current_project_snapshot.md  01_dual_path_baseline.md  01_lpm_research_translation.md  02_actor_event_schema_v2.md  02_target_architecture.md  03_browser_actor_state_parity_api.md  03_phase_roadmap.md  04_conversation_floor_controller.md  04_safety_privacy_consent.md  05_adaptive_interruption_echo_health.md  05_bilingual_actor_bench_plan.md  06_dual_tts_speech_performance_director.md  06_repo_integration_map.md  (+9 more)
evals/: browser_melo_perf_bench_seed_cases.jsonl  human_rating_form.md  regression_cases_barge_in_echo.jsonl
examples/: README.md
local_tts_servers/: __init__.py  melotts_http_server.py  melotts_reference.py
schemas/: active_listener_state.schema.json  active_listener_state_v2.schema.json  actor_bench_result.schema.json  actor_control_frame_v3.schema.json  actor_event.schema.json  actor_event_v2.schema.json  actor_session_trace.schema.json  bilingual_performance_bench_v3_result.schema.json  bilingual_runtime_profile.schema.json  blink_browser_perf_bench_result.schema.json  browser_actor_state_v2.schema.json  browser_interaction_state.schema.json  camera_scene_state.schema.json  camera_state.schema.json  conversation_floor_state.schema.json  discourse_episode_v3.schema.json  memory_continuity_trace.schema.json  memory_use_trace.schema.json  performance_episode_v3.schema.json  performance_event.schema.json  performance_learning_policy_proposal_v3.schema.json  performance_plan.schema.json  performance_plan_v2.schema.json  performance_plan_v3.schema.json  performance_preference_pair.schema.json  persona_reference.schema.json  persona_reference_anchor_v3.schema.json  release_gate.schema.json  run_session_trace.schema.json  scene_social_state_v2.schema.json  semantic_listener_state_v3.schema.json  speech_performance_chunk.schema.json  webrtc_audio_health.schema.json  webrtc_audio_health_v2.schema.json
scripts/: bootstrap-blink-mac.sh  bootstrap-cosyvoice-reference.sh  bootstrap-local-mac.sh  bootstrap-melotts-reference.sh  build-macos-camera-helper.sh  doctor-blink-mac.sh  doctor-local-mac.sh  eval-bilingual-actor-bench.sh  eval-browser-melo-perf.sh  eval-browser-perf.sh  eval-local-tts.sh  eval-performance-intelligence-baseline.sh  prefetch-blink-assets.sh  prefetch-local-assets.sh  run-blink-browser-openai.sh  run-blink-browser.sh  run-blink-chat-openai.sh  run-blink-chat.sh  run-blink-voice-openai.sh  run-blink-voice.sh  run-cosyvoice-reference-server.sh  run-local-browser-cosyvoice.sh  run-local-browser-kokoro-en.sh  run-local-browser-melo.sh  run-local-browser.sh  run-local-chat.sh  run-local-cosyvoice-adapter.sh  run-local-voice-camera-en.sh  run-local-voice-cosyvoice.sh  run-local-voice-en.sh  run-local-voice-macos-camera-en.sh  run-local-voice-melo.sh  run-local-voice.sh  run-melotts-reference-server.sh  smoke-hybrid-openai-demo.sh  test-brain-core.sh  test-embodied-core.sh  test-embodied-evals.sh
tests/: _optional.py  conftest.py  phase23_fixtures.py  phase24_fixtures.py  test_active_listening_bilingual.py  test_active_listening_browser.py  test_actor_control_frame_v3.py  test_actor_event_schema_v2.py  test_actor_release_gate.py  test_actor_trace_replay.py  test_adaptive_interruption_echo_health.py  test_aggregators.py  test_aic_filter.py  test_aic_vad.py  test_audio_buffer_processor.py  test_bilingual_actor_bench.py  test_bilingual_browser_profiles.py  test_blink_cli.py  test_brain_actions.py  test_brain_active_situation_model.py  test_brain_adapter_benchmarks.py  test_brain_adapter_promotion.py  test_brain_adapters.py  test_brain_agenda.py  test_brain_audit_reports.py  test_brain_autonomy.py  test_brain_autonomy_benchmark_program.py  test_brain_behavior_controls.py  test_brain_capability_registry.py  test_brain_commitments.py  test_brain_context_packet_proofs.py  test_brain_context_policy.py  test_brain_continuity_evals.py  test_brain_embodied_eval_arena.py  test_brain_embodied_executive.py  test_brain_episode_evidence_index.py  test_brain_episode_export.py  test_brain_failure_clusters.py  test_brain_frontier_behavior_workbench.py  test_brain_fuzz_harness_smoke.py  (+155 more)
(+981 files in other folders)
